chore(deps): update all java deps